--- a/app/src/main/res/layout/fragment_product_list.xml
+++ b/app/src/main/res/layout/fragment_product_list.xml
@@ -1,14 +1,79 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
+    android:orientation="vertical"
     tools:context=".fragment.ProductListFragment">
+
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/ab_top"
+        android:layout_width="match_parent"
+        android:layout_height="55dp"
+        android:visibility="visible"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/cl_top_icons"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingVertical="10dp"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <ImageView
+                android:id="@+id/img_back"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:src="@drawable/ic_arrow_back_black_24dp"
+                android:padding="5dp"
+                android:background="@drawable/round_ripple_background"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:tint="@color/black" />
+
+            <com.mancj.materialsearchbar.MaterialSearchBar
+                android:id="@+id/searchBar"
+                style="@style/MaterialSearchBarLight"
+                android:layout_width="0dp"
+                android:layout_height="40dp"
+                android:background="@color/transparent_100"
+                android:elevation="0dp"
+                app:elevation="0dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintLeft_toRightOf="@+id/img_back"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:mt_backIconTint="@color/white"
+                app:mt_borderlessRippleEnabled="true"
+                app:mt_clearIconTint="@color/black"
+                app:mt_dividerColor="@color/black"
+                app:mt_hint="@string/search_products"
+                app:mt_hintColor="@color/transparent_black_50"
+                app:mt_maxSuggestionsCount="10"
+                app:mt_placeholder="@string/product_list"
+                app:mt_placeholderColor="@color/black"
+                app:mt_searchBarColor="@color/transparent_100"
+                app:mt_searchIconTint="@color/black"
+                app:mt_textColor="@color/black"
+                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </androidx.appcompat.widget.Toolbar>
+
+    <include
+        android:layout_height="1dp"
+        android:layout_width="match_parent"
+        android:id="@+id/line"
+        layout="@layout/item_drop_shadow_black"/>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_product"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:listitem="@layout/item_product"/>
+        tools:listitem="@layout/item_product"
+        android:layout_marginTop="20dp"/>
 
 </LinearLayout>
