--- a/app/src/main/res/layout/item_product.xml
+++ b/app/src/main/res/layout/item_product.xml
@@ -1,90 +1,61 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="50dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_marginTop="10dp"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_marginVertical="10dp"
     android:gravity="center_vertical"
     android:minHeight="?android:attr/listPreferredItemHeightSmall"
     android:orientation="horizontal"
-    android:paddingEnd="?android:attr/listPreferredItemPaddingEnd"
     android:paddingStart="?android:attr/listPreferredItemPaddingStart"
+    android:paddingEnd="?android:attr/listPreferredItemPaddingEnd"
     android:textAppearance="?android:attr/textAppearanceListItemSmall">
-
-    <RelativeLayout
-        android:id="@+id/view_background"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:visibility="visible">
-
-        <ImageView
-            android:id="@+id/delete_icon"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_centerVertical="true"
-            android:layout_marginStart="10dp"
-            android:src="@drawable/ic_baseline_delete_24"
-            app:tint="@color/errorRed" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_marginRight="30dp"
-            android:visibility="gone"
-            android:layout_toRightOf="@id/delete_icon"
-            android:text="Delete"
-            android:textColor="@color/white"
-            android:textSize="13dp" />
-
-    </RelativeLayout>
 
     <LinearLayout
         android:id="@+id/view_foreground"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="horizontal"
-        android:gravity="center">
+        android:gravity="center"
+        android:orientation="horizontal">
 
-                <androidx.cardview.widget.CardView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:background="@color/transparent_100"
-                    app:cardCornerRadius="10dp">
+        <androidx.cardview.widget.CardView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@color/transparent_100"
+            app:cardCornerRadius="10dp">
 
-        <ImageView
-            android:id="@+id/img_product"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:scaleType="centerCrop"
-            android:src="@drawable/img_call_log_profile" />
+            <ImageView
+                android:id="@+id/img_product"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:scaleType="centerCrop"
+                android:src="@drawable/img_call_log_profile" />
 
-                </androidx.cardview.widget.CardView>
+        </androidx.cardview.widget.CardView>
 
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
             android:layout_weight="1"
-            android:gravity="center_vertical">
+            android:gravity="center_vertical"
+            android:orientation="vertical">
 
             <TextView
                 android:id="@+id/tv_product"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:fontFamily="@font/gotham_ssm_medium"
-                android:textSize="16dp"
                 android:layout_marginLeft="10dp"
+                android:fontFamily="@font/gotham_ssm_medium"
                 android:textColor="@color/black"
+                android:textSize="16dp"
                 tools:text="Samsugn" />
 
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:gravity="center_vertical">
+                android:gravity="center_vertical"
+                android:orientation="horizontal">
 
                 <TextView
                     android:id="@+id/tv_price"
@@ -92,16 +63,16 @@
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="10dp"
                     android:fontFamily="@font/gotham_ssm_book"
-                    android:textSize="12dp"
                     android:textColor="@color/black"
+                    android:textSize="12dp"
                     tools:text="15000" />
 
                 <include
-                    android:layout_height="match_parent"
-                    android:layout_width="2dp"
-                    android:layout_marginLeft="10dp"
                     android:id="@+id/line"
-                    layout="@layout/item_drop_shadow"/>
+                    layout="@layout/item_drop_shadow"
+                    android:layout_width="2dp"
+                    android:layout_height="match_parent"
+                    android:layout_marginLeft="10dp" />
 
                 <TextView
                     android:id="@+id/end_time"
@@ -109,8 +80,8 @@
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="10dp"
                     android:fontFamily="@font/gotham_ssm_book"
-                    android:textSize="12dp"
                     android:textColor="@color/white"
+                    android:textSize="12dp"
                     tools:text="hiii" />
 
             </LinearLayout>
@@ -121,10 +92,10 @@
             android:id="@+id/img_calling"
             android:layout_width="35dp"
             android:layout_height="35dp"
-            android:padding="6dp"
-            android:enabled="true"
-            android:clickable="true"
             android:background="@drawable/round_ripple_background"
+            android:clickable="true"
+            android:enabled="true"
+            android:padding="6dp"
             android:src="@drawable/ic_baseline_edit_24"
             android:textAllCaps="false" />
 
