--- a/app/src/main/res/drawable-v21/round_ripple_background.xml
+++ b/app/src/main/res/drawable-v21/round_ripple_background.xml
@@ -1,9 +1,9 @@
 <ripple xmlns:android="http://schemas.android.com/apk/res/android"
-    android:color="@color/transparent_white_36">
+    android:color="@color/transparent_black_36">
     <item android:id="@android:id/mask">
         <shape android:shape="rectangle">
             <corners android:radius="100dp"/>
-            <solid android:color="@android:color/white"/>
+            <solid android:color="@android:color/black"/>
             <size android:height="80dp" android:width="80dp"/>
         </shape>
     </item>
