--- a/app/src/main/res/layout/item_product.xml
+++ b/app/src/main/res/layout/item_product.xml
@@ -35,6 +35,7 @@
         </androidx.cardview.widget.CardView>
 
         <LinearLayout
+            android:id="@+id/ll_title"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -89,15 +90,16 @@
         </LinearLayout>
 
         <ImageView
-            android:id="@+id/img_calling"
-            android:layout_width="35dp"
-            android:layout_height="35dp"
+            android:id="@+id/img_delete"
+            android:layout_width="45dp"
+            android:layout_height="45dp"
             android:background="@drawable/round_ripple_background"
             android:clickable="true"
             android:enabled="true"
-            android:padding="6dp"
-            android:src="@drawable/ic_baseline_edit_24"
-            android:textAllCaps="false" />
+            android:padding="7dp"
+            android:src="@drawable/ic_baseline_delete_24"
+            android:textAllCaps="false"
+            app:tint="@color/errorRed" />
 
     </LinearLayout>
 
