--- a/app/src/main/res/layout/fragment_product_detail.xml
+++ b/app/src/main/res/layout/fragment_product_detail.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -54,22 +54,30 @@
         android:layout_width="match_parent"
         android:id="@+id/line"
         android:layout_marginBottom="15dp"
+        app:layout_constraintTop_toBottomOf="@+id/ab_top"
         layout="@layout/item_drop_shadow_black"/>
 
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@+id/line">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <ImageView
+            <ozaydin.serkan.com.image_zoom_view.ImageViewZoom
                 android:id="@+id/img_product"
                 android:layout_width="match_parent"
                 android:layout_height="250dp"
-                android:src="@drawable/img_m31"/>
+                android:scaleType="centerInside"
+                android:src="@drawable/img_m31" />
+<!--            <ImageView-->
+<!--                android:id="@+id/img_product"-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="250dp"-->
+<!--                android:src="@drawable/img_m31"/>-->
 
             <TextView
                 android:id="@+id/tv_name"
@@ -126,4 +134,18 @@
 
     </androidx.core.widget.NestedScrollView>
 
-</LinearLayout>
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fab_edit"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:clickable="true"
+        android:src="@drawable/ic_baseline_edit_24"
+        android:tint="@color/white"
+        android:background="@color/black"
+        android:backgroundTint="@color/black"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="20dp"
+        android:layout_marginRight="20dp"/>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
